[package]
name = "ble-collector-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { git = "https://github.com/night-crawler/btleplug", branch = "add-service-uuid-value-notification", version = "0.11", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.5", features = ["serde"] }
rand = "0.8"
futures-util = "0.3.29"
kanal = "0.1.0-pre8"
thiserror = "1"
anyhow = { version = "1", features = ["default", "backtrace"] }
log = { version = "0.4.20", features = [] }
clap = { version = "4", features = ["derive", "color", "suggestions"] }
rocket = { version = "0.5", features = ["json"] }
lazy_static = "1.4"
strum = "0.25"
strum_macros = "0.25"
regex = { version = "1.10.2", features = ["default"] }
retainer = "0.3"
fern = { version = "0.6", features = ["colored"] }
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
bounded-integer = { version = "0.5", features = ["serde1", "std", "types"] }
num-bigint = "0.4"
num-traits = "0.2"

dashmap = { version = "5.5", features = ["serde"] }

metrics = { version = "0.21" }
metrics-exporter-prometheus = { version = "0.12" }
metrics-util = "0.15"

serde = { default-features = false, version = "1", features = ["rc"] }
serde_yaml = "0.9"
serde_json = "1"
serde_with = "3.4"
serde_regex = "1.1"
humantime-serde = "1.1"

[dev-dependencies]
float-cmp = "0.9.0"
